Fixed a bug opening the GUI on a Folia server.